--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "memorystore": "^1.6.7",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.8.0",
